uses flex fix accordion, layout side panel and have gap no padding

--- a/src/main/app-ui/src/app/phenotype-of-the-month/phenotype-of-the-month.component.css
+++ b/src/main/app-ui/src/app/phenotype-of-the-month/phenotype-of-the-month.component.css
@@ -3,8 +3,8 @@
     background-color: #0978a1;
     font-size: 1.4em;
     text-align: center;
-    border-radius: 4px 4px 4px 4px;
-    padding-bottom:10px;
+    /* border-radius: 4px 4px 4px 4px; */
+    /* padding-bottom:10px; */
 }
 
 .blue-box a, h3{
