--- a/src/main/app-ui/src/styles.css
+++ b/src/main/app-ui/src/styles.css
@@ -32,13 +32,13 @@ a {
     
 }
 
-mat-sidenav {
+/* mat-sidenav {
     min-width: 340px;
     padding-top: 20px;
     padding-right: 35px;
     padding-bottom: 35px;
-    padding-left: 35px;
-}
+    margin-left: 35px;
+} */
 .mat-button.mat-primary .mat-button-focus-overlay {
     background-color: orange;
   }
